# user_input

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: general_input.rs  with_autocomplete.rs
src/: input.rs  lib.rs  suggestion.rs
