[package]
name = "user_input"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "The only purpose of this crate is to provide easy functionality to accept input from user, with an optional support for auto-complete of provided with a function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
colored = "*"
serde_json = "*"
ureq = "*"