[package]
name = "user_input_with_autocomplete"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "The only purpose of this crate is to provide easy functionality to accept input from user, with an optional support for auto-complete of provided with a function"
exclude = [".github/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
colored = "2.0.0"
serde_json = "1.0.73"
ureq = "2.3.1"